tests/fixtures/invalid/bytes_pow_none.py
# Cannot power Bytes and None
x: bytes = b"hello" ** None
